--- a/index.html
+++ b/index.html
@@ -1,61 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Insove</title>
     <!-- CSS -->
-    <link rel="stylesheet" href="dist/output.css">
+    <link rel="stylesheet" href="dist/output.css" />
     <!-- icons -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.min.css">
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.min.css"
+    />
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
 
     <!--Swipper CSS  -->
-    <link rel="stylesheet" href="css/swiper-bundle.min.css">
-</head>
+    <link rel="stylesheet" href="css/swiper-bundle.min.css" />
+  </head>
 
-<body>
+  <body>
     <header class="py-8 lg:pt-6 lg:pb-14">
-        <div class="container mx-auto flex flex-col gap-y-4 lg:gap-y-0 lg:relative lg:flex-row lg:justify-between">
-            <!-- logo -->
-            <div class="flex justify-center lg:justify-normal">
-                <a href="#" class="hover:cursor-pointer">
-                    <img src="./assets/img/header/logo.svg" alt="" srcset="">
-                </a>
-            </div>
-
-            <div class="flex flex-col gap-y-4 lg:flex-row lg:gap-x-10 lg:gap-y-0 lg:items-center">
-                <!-- location -->
-                <div class="flex justify-center gap-x-2 lg:justify-normal">
-                    <i class="ri-map-pin-fill text-2xl text-accent"></i>
-                    <div class="text-secondary hover:text-accent-secondary hover:cursor-pointer">123
-                        Gopalpur,Tangail,Dhaka</div>
-                </div>
-                <!-- phone -->
-                <div class="flex justify-center gap-x-2 lg:justify-normal">
-                    <i class="ri-phone-fill text-x-2xl text-accent"></i>
-                    <div class="text-secondary hover:text-accent-secondary hover:cursor-pointer">01742503080</div>
-                </div>
-                <!-- btn -->
-                <button class="btn btn-sm btn-outline w-[240px] lg:w-auto mx-auto lg:mx-0">Book now</button>
-                <!-- Mobile Nav -->
-                <nav
-                    class="mnav bg-pink-300 h-screen top-0 -left-[300px] fixed w-[300px] shadow-2xl transition-all duration-300 z-20 lg:hidden">
-                    <div
-                        class="mnav__close-btn bg-primary h-8 w-8 rounded-tr-lg rounded-br-lg cursor-pointer transition-all flex justify-center items-center -right-full relative">
-                        <i class="mnav__close-btn-icon ri-arrow-right-s-line text-2xl text-white" </div>
-                </nav>
-            </div>
-
+      <div
+        class="container mx-auto flex flex-col gap-y-4 lg:gap-y-0 lg:relative lg:flex-row lg:justify-between"
+      >
+        <!-- logo -->
+        <div class="flex justify-center lg:justify-normal">
+          <a href="#" class="hover:cursor-pointer">
+            <img src="./assets/img/header/logo.svg" alt="" srcset="" />
+          </a>
         </div>
-    </header>
 
+        <div
+          class="flex flex-col gap-y-4 lg:flex-row lg:gap-x-10 lg:gap-y-0 lg:items-center"
+        >
+          <!-- location -->
+          <div class="flex justify-center gap-x-2 lg:justify-normal">
+            <i class="ri-map-pin-fill text-2xl text-accent"></i>
+            <div
+              class="text-secondary hover:text-accent-secondary hover:cursor-pointer"
+            >
+              123 Gopalpur,Tangail,Dhaka
+            </div>
+          </div>
+          <!-- phone -->
+          <div class="flex justify-center gap-x-2 lg:justify-normal">
+            <i class="ri-phone-fill text-x-2xl text-accent"></i>
+            <div
+              class="text-secondary hover:text-accent-secondary hover:cursor-pointer"
+            >
+              01742503080
+            </div>
+          </div>
+          <!-- btn -->
+          <button
+            class="btn btn-sm btn-outline w-[240px] lg:w-auto mx-auto lg:mx-0"
+          >
+            Book now
+          </button>
+          <!-- Mobile Nav -->
+          <nav
+            class="mnav bg-pink-200 fixed w-[300px] top-0 h-screen -left-[300px] shadow-2xl lg:hidden transition-all duration-300 z-20"
+          >
+            <!-- Nav Trigger -->
+            <div
+              class="mnav__close-btn bg-primary w-8 h-8 relative -right-full top-8 flex justify-center items-center rounded-tr-lg rounded-br-lg cursor-pointer transition-all"
+            >
+              <i
+                class="mnav__close-btn-icon ri-arrow-right-s-line text-2xl text-white"
+              ></i>
+            </div>
+          </nav>
+        </div>
+      </div>
+    </header>
 
     <!-- Script -->
     <!-- Scroll reveals -->
@@ -64,8 +86,7 @@
     <script src="js/swiper-bundle.min.js"></script>
     <!-- main -->
     <script src="js/main.js"></script>
-</body>
-
+  </body>
 </html>
 
 <!-- https://www.youtube.com/watch?v=qmMIz0_c9Ek -->
