--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </button>
           <!-- Mobile Nav -->
           <nav
-            class="mnav bg-pink-200 fixed w-[300px] top-0 h-screen -left-[300px] shadow-2xl lg:hidden transition-all duration-300 z-20"
+            class="mnav bg-white fixed w-[300px] top-0 h-screen -left-[300px] shadow-2xl lg:hidden transition-all duration-300 z-20"
           >
             <!-- Nav Trigger -->
             <div
@@ -74,6 +74,138 @@
                 class="mnav__close-btn-icon ri-arrow-right-s-line text-2xl text-white"
               ></i>
             </div>
+
+            <!-- Logo,list,form -->
+            <div class="px-12 flex flex-col gap-y-12 h-full">
+              <!-- logo -->
+              <a href="#">
+                <img src="assets/img/header/logo.svg" alt="" srcset="" />
+              </a>
+
+              <!-- list -->
+              <ul class="flex flex-col gap-y-5">
+                <li>
+                  <a
+                    href="#"
+                    class="text-secondary hover:text-accent transition-all duration-300"
+                    >Home</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="#"
+                    class="text-secondary hover:text-accent transition-all duration-300"
+                    >Doctors</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="#"
+                    class="text-secondary hover:text-accent transition-all duration-300"
+                    >Department</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="#"
+                    class="text-secondary hover:text-accent transition-all duration-300"
+                    >Services</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="#"
+                    class="text-secondary hover:text-accent transition-all duration-300"
+                    >Blog</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="#"
+                    class="text-secondary hover:text-accent transition-all duration-300"
+                    >Contact</a
+                  >
+                </li>
+              </ul>
+
+              <!-- form -->
+              <form action="#" class="relative flex gap-x-[15px]">
+                <label for="mnav-search-input">
+                  <i class="ri-search-line text-2xl text-accent"></i>
+                  <input
+                    type="text"
+                    id="mnav-search-input"
+                    placeholder="Search..."
+                    class="outline-none w-[160px] border-b-2 focus:border-b-2 focus:border-accent placeholder:italic"
+                  />
+                </label>
+              </form>
+            </div>
+          </nav>
+          <!-- Desktop Nav -->
+          <nav
+            class="bg-white absolute w-full left-0 -bottom-[86px] shadow-custom1 h-16 rounded-[10px] hidden lg:flex lg:items-center lg:justify-between lg:px-[50px]"
+          >
+            <!-- list -->
+            <ul class="flex gap-x-4">
+              <li>
+                <a
+                  href="#"
+                  class="border-r pr-4 text-secondary hover:text-accent transition-all duration-300"
+                  >Home</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#"
+                  class="border-r pr-4 text-secondary hover:text-accent transition-all duration-300"
+                  >Doctors</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#"
+                  class="border-r pr-4 text-secondary hover:text-accent transition-all duration-300"
+                  >Department</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#"
+                  class="border-r pr-4 text-secondary hover:text-accent transition-all duration-300"
+                  >Services</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#"
+                  class="border-r pr-4 text-secondary hover:text-accent transition-all duration-300"
+                  >Blog</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#"
+                  class="border-r pr-4 text-secondary hover:text-accent transition-all duration-300"
+                  >Contact</a
+                >
+              </li>
+            </ul>
+            <!-- form -->
+            <form action="" class="relative flex gap-x-[10px]">
+              <label
+                for="search-input"
+                class="flex justify-center items-center group"
+              >
+                <i class="ri-search-line text-2xl text-accent mr-2"></i>
+                <input
+                  type="text"
+                  id="search-input"
+                  placeholder="Search..."
+                  class="outline-none w-[100px] focus:w-[180px] focus:border-b-2 focus:border-accent duration-150 transition-all placeholder:italic placeholder:text-base"
+                />
+              </label>
+            </form>
           </nav>
         </div>
       </div>
