--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="container mx-auto flex flex-col gap-y-4 lg:gap-y-0 lg:relative lg:flex-row lg:justify-between">
             <!-- logo -->
             <div class="flex justify-center lg:justify-normal">
-                <a href="#">
+                <a href="#" class="hover:cursor-pointer">
                     <img src="./assets/img/header/logo.svg" alt="" srcset="">
                 </a>
             </div>
@@ -34,15 +34,23 @@
                 <!-- location -->
                 <div class="flex justify-center gap-x-2 lg:justify-normal">
                     <i class="ri-map-pin-fill text-2xl text-accent"></i>
-                    <div class="text-secondary">123 Gopalpur,Tangail,Dhaka</div>
+                    <div class="text-secondary hover:text-accent-secondary hover:cursor-pointer">123
+                        Gopalpur,Tangail,Dhaka</div>
                 </div>
                 <!-- phone -->
                 <div class="flex justify-center gap-x-2 lg:justify-normal">
                     <i class="ri-phone-fill text-x-2xl text-accent"></i>
-                    <div class="text-secondary">01742503080</div>
+                    <div class="text-secondary hover:text-accent-secondary hover:cursor-pointer">01742503080</div>
                 </div>
                 <!-- btn -->
                 <button class="btn btn-sm btn-outline w-[240px] lg:w-auto mx-auto lg:mx-0">Book now</button>
+                <!-- Mobile Nav -->
+                <nav
+                    class="mnav bg-pink-300 h-screen top-0 -left-[300px] fixed w-[300px] shadow-2xl transition-all duration-300 z-20 lg:hidden">
+                    <div
+                        class="mnav__close-btn bg-primary h-8 w-8 rounded-tr-lg rounded-br-lg cursor-pointer transition-all flex justify-center items-center -right-full relative">
+                        <i class="mnav__close-btn-icon ri-arrow-right-s-line text-2xl text-white" </div>
+                </nav>
             </div>
 
         </div>
