--- a/index.html
+++ b/index.html
@@ -211,6 +211,43 @@
       </div>
     </header>
 
+    <!-- Hero -->
+
+    <section class="bg-grey">
+      <div class="container flex mx-auto py-12">
+        <!-- text and Content left for lg and center for sm -->
+        <div class="flex flex-col lg:ml-0 lg:py-12">
+          <div
+            class="py-[10px] px-[20px] flex items-center bg-white w-max gap-x-2 mb-[26px] rounded-full mx-auto xl:mx-0"
+          >
+            <i class="ri-heart-pulse-line text-2xl text-accent"></i>
+            <div class="uppercase text-base font-medium text-[#9ab4b7]">
+              Live your life
+            </div>
+          </div>
+          <h1 class="h1 text-center mb-6 lg:text-left lg:w-[640px] font-[1100]">
+            We care about your health
+          </h1>
+          <p class="mb-[42px] md:max-w-xl">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam
+            adipisci quas, modi eos provident dicta ut iste assumenda nisi, nam
+            voluptas. Sequi cupiditate aliquam commodi nostrum vitae possimus
+            quo in!
+          </p>
+          <button
+            class="btn btn-lg btn-accent mx-auto text-sm w-[200px] lg:mx-0"
+          >
+            Contact US
+          </button>
+        </div>
+        <div class="hidden max-w-[814px] self-end xl:flex">
+          <img src="assets/img/hero/img.png" alt="" />
+        </div>
+      </div>
+    </section>
+
+    
+
     <!-- Script -->
     <!-- Scroll reveals -->
     <script src="js/scrollreveal.min.js"></script>
