--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </div>
           <!-- btn -->
           <button
-            class="btn btn-sm btn-outline w-[240px] lg:w-auto mx-auto lg:mx-0"
+            class="btn btn-lg btn-outline w-[240px] lg:w-auto mx-auto lg:mx-0"
           >
             Book now
           </button>
@@ -234,9 +234,7 @@
             voluptas. Sequi cupiditate aliquam commodi nostrum vitae possimus
             quo in!
           </p>
-          <button
-            class="btn btn-lg btn-accent mx-auto text-sm w-[200px] lg:mx-0"
-          >
+          <button class="btn btn-lg btn-outline w-[240px] mx-auto lg:mx-0">
             Contact US
           </button>
         </div>
@@ -246,7 +244,58 @@
       </div>
     </section>
 
-    
+    <!-- Stats -->
+    <section class="stats section">
+      <div class="container mx-auto">
+        <!-- wrapper -->
+        <div class="flex flex-col lg:flex-row gap-y-6 justify-between">
+          <!-- item -->
+          <div
+            class="stats__item flex-1 xl:border-r flex flex-col items-center"
+          >
+            <div
+              class="text-4xl xl:text-[64px] font-semibold text-accent-tertiary xl:mb-2 hover:text-accent"
+            >
+              +5120
+            </div>
+            <div>Happy Patients</div>
+          </div>
+          <!-- item -->
+          <div
+            class="stats__item flex-1 xl:border-r flex flex-col items-center"
+          >
+            <div
+              class="text-4xl xl:text-[64px] font-semibold text-accent-tertiary xl:mb-2 hover:text-accent"
+            >
+              +26
+            </div>
+            <div>Total Branches</div>
+          </div>
+          <!-- item -->
+          <div
+            class="stats__item flex-1 xl:border-r flex flex-col items-center"
+          >
+            <div
+              class="text-4xl xl:text-[64px] font-semibold text-accent-tertiary xl:mb-2 hover:text-accent"
+            >
+              +53
+            </div>
+            <div>Senior Doctors</div>
+          </div>
+          <!-- item -->
+          <div
+            class="stats__item flex-1 xl:border-r flex flex-col items-center"
+          >
+            <div
+              class="text-4xl xl:text-[64px] font-semibold text-accent-tertiary xl:mb-2 hover:text-accent"
+            >
+              +5120
+            </div>
+            <div>Years Experience</div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- Script -->
     <!-- Scroll reveals -->
