--- a/index.html
+++ b/index.html
@@ -221,7 +221,10 @@
     <section class="relative">
         <div class="lg:mx-36 bg-accent lg:rounded-xl">
             <div class="container mx-auto text-white pt-20 pb-40 lg:flex flex-wrap">
-                <div class="text-2xl flex-1 font-semibold">Our Best Services For Your Solution</div>
+                <div class="text-2xl lg:text-4xl flex-1 font-semibold lg:pr-[50px] pb-2 lg:pb-0">Our Best Services For
+                    Your
+                    Solution
+                </div>
                 <div class="font-light flex-1">Vitae aliquam vestibulum elit adipiscing massa diam in dignissim. Risus
                     tellus
                     libero elementum aliquam
