--- a/index.html
+++ b/index.html
@@ -216,54 +216,142 @@
     </section>
     <!-- end stats -->
 
-
-
-    <section class="relative">
-        <div class="lg:mx-36 bg-accent lg:rounded-xl">
-            <div class="container mx-auto text-white pt-20 pb-40 lg:flex flex-wrap">
-                <div class="text-2xl lg:text-4xl flex-1 font-semibold lg:pr-[50px] pb-2 lg:pb-0">Our Best Services For
-                    Your
-                    Solution
+    <!--  services -->
+    <section class="services">
+        <!-- bg -->
+        <div
+            class="bg-services bg-cover bg-no-repeat max-w-[1466px] mx-4 lg:mx-auto rounded-[20px] lg:pt-[70px] px-6 lg:px-0 relative h-[368px] flex items-center lg:items-start -z-10">
+            <div class="container mx-auto ">
+                <div class="services__top flex item-center flex-col lg:flex-row lg:mb-[60px]">
+                    <h2 class="h2 text-white flex-1 mb-4 lg:mb-0 text-center lg:text-left">Our best services for your
+                        solution</h2>
+                    <p class="flex-1 text-white lg:text-left max-w-2xl lg:max-w-none">Lorem ipsum dolor sit amet
+                        consectetur
+                        adipisicing elit. Deserunt sint
+                        inventore
+                        incidunt
+                        ducimus? Nihil praesentium soluta porro sit dolores vitae, architecto nam et, iure aperiam,
+                        necessitatibus explicabo ea. Placeat, distinctio?</p>
                 </div>
-                <div class="font-light flex-1">Vitae aliquam vestibulum elit adipiscing massa diam in dignissim. Risus
-                    tellus
-                    libero elementum aliquam
-                    etiam. Lectus adipiscing est auctor mi quisque nunc non viverra est.</div>
             </div>
         </div>
-        <div class="container mx-auto absolute left-0 right-0 top-[250px]">
-            <div class="flex flex-col gap-y-6 lg:flex-row lg:gap-x-6">
+        <!-- grid container -->
+        <div class="container mx-auto mt-8 lg:-mt-[144px]">
+            <div class="grid lg:grid-cols-4 gap-5 px-8 lg:px-0">
+                <!-- grid -->
                 <div
-                    class="card bg-white text-center p-10 rounded-xl hover:shadow-custom1 hover:translate-y-[-5px] hover:transition-all hover:duration-500">
-                    <i class="ri-hospital-line text-4xl text-accent-secondary mb-2"></i>
-                    <div class="text-2xl font-semibold text-primary mb-2">General Practitioners</div>
-                    <div> Aliquam etiam lectus adipiscing est auctor mi quisque non viverra.</div>
+                    class="services__item bg-white p-[30px] rounded-[10px] shadow-custom2 min-h-[288px] flex flex-col items-center text-center hover:translate-y-[-10px] hover:transition-all hover:duration-300">
+                    <div class="mb-[15px]">
+                        <img src="assets/icons/services/icon-1.svg" alt="">
+                    </div>
+                    <h3 class="h3 mb-[10px]">General Practitioners</h3>
+                    <p class="font-light leading-normal max-w-[300px]">Lorem ipsum, dolor sit amet consectetur
+                        adipisicing
+                        elit. .</p>
                 </div>
+                <!-- grid -->
                 <div
-                    class="card bg-white text-center p-10 rounded-xl hover:shadow-custom1 hover:translate-y-[-5px] hover:transition-all hover:duration-500">
-                    <i class="ri-hospital-line text-4xl text-accent-secondary mb-2"></i>
-                    <div class="text-2xl font-semibold text-primary mb-2">General Practitioners</div>
-                    <div> Aliquam etiam lectus adipiscing est auctor mi quisque non viverra.</div>
+                    class="services__item bg-white p-[30px] rounded-[10px] shadow-custom2 min-h-[288px] flex flex-col items-center text-center hover:translate-y-[-10px] hover:transition-all hover:duration-300">
+                    <div class="mb-[15px]">
+                        <img src="assets/icons/services/icon-2.svg" alt="">
+                    </div>
+                    <h3 class="h3 mb-[10px]">General Practitioners</h3>
+                    <p class="font-light leading-normal max-w-[300px]">Lorem ipsum, dolor sit amet consectetur
+                        adipisicing
+                        elit. Tenetur repellat aut dignissimos, natus
+                        assumenda expedita quis enim, </p>
                 </div>
+                <!-- grid -->
                 <div
-                    class="card bg-white text-center p-10 rounded-xl hover:shadow-custom1 hover:translate-y-[-5px] hover:transition-all hover:duration-500">
-                    <i class="ri-hospital-line text-4xl text-accent-secondary mb-2"></i>
-                    <div class="text-2xl font-semibold text-primary mb-2">General Practitioners</div>
-                    <div> Aliquam etiam lectus adipiscing est auctor mi quisque non viverra.</div>
+                    class="services__item bg-white p-[30px] rounded-[10px] shadow-custom2 min-h-[288px] flex flex-col items-center text-center hover:translate-y-[-10px] hover:transition-all hover:duration-300">
+                    <div class="mb-[15px]">
+                        <img src="assets/icons/services/icon-3.svg" alt="">
+                    </div>
+                    <h3 class="h3 mb-[10px]">General Practitioners</h3>
+                    <p class="font-light leading-normal max-w-[300px]">Lorem ipsum, dolor sit amet consectetur
+                        adipisicing
+                        elit. Tenetur repellat aut dignissimos, natus
+                        assumenda expedita quis enim, animi laboriosam velit, </p>
                 </div>
+                <!-- grid -->
                 <div
-                    class="card bg-white text-center p-10 rounded-xl hover:shadow-custom1 hover:translate-y-[-5px] hover:transition-all hover:duration-500">
-                    <i class="ri-hospital-line text-4xl text-accent-secondary mb-2"></i>
-                    <div class="text-2xl font-semibold text-primary mb-2">General Practitioners</div>
-                    <div> Aliquam etiam lectus adipiscing est auctor mi quisque non viverra.</div>
+                    class="services__item bg-white p-[30px] rounded-[10px] shadow-custom2 min-h-[288px] flex flex-col items-center text-center hover:translate-y-[-10px] hover:transition-all hover:duration-300">
+                    <div class="mb-[15px]">
+                        <img src="assets/icons/services/icon-4.svg" alt="">
+                    </div>
+                    <h3 class="h3 mb-[10px]">General Practitioners</h3>
+                    <p class="font-light leading-normal max-w-[300px]">Lorem ipsum, dolor sit amet consectetur
+                        adipisicing
+                        elit. Tenetur repellat aut dignissimos, natus
+                        assumenda expedita quis enim</p>
                 </div>
             </div>
         </div>
     </section>
+    <!-- end services-->
 
-    <!--  -->
-    <!-- -->
-    <!--  -->
+    <!-- appointment -->
+    <section class="appointment section">
+        <div class="container mx-auto">
+            <h2 class="h2 mb-5 lg:mb-[50px] text-center lg:text-left">Book Appointment or call: <span
+                    class="text-accent">(+487) 384
+                    9452</span></h2>
+            <!-- form -->
+            <form action="" class="appontment__form flex flex-col gap-y-5 px-4 lg:px-0">
+                <!-- select wrapper -->
+                <div class="flex flex-col lg:flex-row gap-y-5 lg:gap-x-5">
+                    <!-- select 1 -->
+                    <div class="select relative flex items-center">
+                        <!-- icon -->
+                        <div class="absolute right-4">
+                            <i class="ri-arrow-down-s-line text-[26px] text-primary"></i>
+                        </div>
+                        <!-- select -->
+                        <select class="appearance-none outline-none h-full w-full bg-transparent px-4">
+                            <option value="">Select departmet</option>
+                            <option value="1">Department 1</option>
+                            <option value="2">Department 2</option>
+                            <option value="3">Department 3</option>
+                            <option value="4">Department 4</option>
+                        </select>
+                    </div>
+                    <!-- select 1 end -->
+
+                    <!-- select 2 -->
+                    <div class="select relative flex items-center">
+                        <!-- icon -->
+                        <div class="absolute right-4">
+                            <i class="ri-arrow-down-s-line text-[26px] text-primary"></i>
+                        </div>
+                        <!-- select -->
+                        <select class="appearance-none outline-none h-full w-full bg-transparent px-4">
+                            <option value="">Select Doctor</option>
+                            <option value="1">Doctor 1</option>
+                            <option value="2">Doctor 2</option>
+                            <option value="3">Doctor 3</option>
+                            <option value="4">Doctor 4</option>
+                        </select>
+                    </div>
+                    <!-- select 2 end -->
+
+
+                </div>
+                <!-- input -->
+
+                <div class="flex flex-col lg:flex-row gap-5">
+                    <input type="text" class="input" placeholder="Full Name" />
+                    <input type="text" class="input" placeholder="Phone Number" />
+                </div>
+                <div class="flex flex-col lg:flex-row gap-5">
+                    <input type="date" class="input" placeholder="Full Name" />
+                    <input type="time" class="input" placeholder="Phone Number" />
+                </div>
+                <button class="btn btn-lg  btn-accent self-start">Book an appointment</button>
+            </form>
+        </div>
+    </section>
+    <!-- end appointment -->
+
     <!-- Script -->
     <!-- Scroll reveals -->
     <script src="js/scrollreveal.min.js"></script>
