--- a/index.html
+++ b/index.html
@@ -333,8 +333,6 @@
                         </select>
                     </div>
                     <!-- select 2 end -->
-
-
                 </div>
                 <!-- input -->
 
@@ -342,10 +340,18 @@
                     <input type="text" class="input" placeholder="Full Name" />
                     <input type="text" class="input" placeholder="Phone Number" />
                 </div>
+                <!--
                 <div class="flex flex-col lg:flex-row gap-5">
-                    <input type="date" class="input" placeholder="Full Name" />
-                    <input type="time" class="input" placeholder="Phone Number" />
+                    <input type="text" name="" id="" placeholder="Full Name" class="w-full border border-1 border-gray-300 rounded-lg px-4 font-light h-10 text-sm 
+                        focus:outline-blue-400">
+                    <input type="text" name="" id="" placeholder="Full Name" class="w-full border border-1 border-gray-300  rounded-lg px-4 font-light h-10 text-sm 
+                        focus:outline-blue-400">
+                    <input type="text" name="" id="" placeholder="Full Name" class="w-full border border-1 border-gray-300 rounded-lg px-4 font-light h-10 text-sm 
+                        focus:outline-blue-400">
+                    <input type="text" name="" id="" placeholder="Full Name" class="w-full border border-1 border-gray-300 rounded-lg px-4 font-light h-10 text-sm 
+                        focus:outline-blue-400">
                 </div>
+                  -->
                 <button class="btn btn-lg  btn-accent self-start">Book an appointment</button>
             </form>
         </div>
